--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         
         <!-- Title -->
-        <title>Lime - Responsive Admin Dashboard Template</title>
+        <title>AquaPrograms</title>
 
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -36,10 +36,10 @@
             <div class="lime-sidebar-inner slimscroll">
                 <ul class="accordion-menu">
                     <li class="sidebar-title">
-                        Apps
+                        Основное
                     </li>
                     <li>
-                        <a href="index.html" class="active"><i class="material-icons">dashboard</i>Dashboard</a>
+                        <a href="index.html" class="active"><i class="material-icons">Главная</i>Главная</a>
                     </li>
                     <li>
                         <a href="profile.html"><i class="material-icons">person_outline</i>Profile</a>
@@ -231,7 +231,7 @@
                         <span class="material-design-hamburger__layer"></span>
                     </a>
                 </section>
-                <a class="navbar-brand" href="#">Lime</a>
+                <a class="navbar-brand" href="#">AquaPrograms</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="material-icons">keyboard_arrow_down</i>
                 </button>
@@ -486,7 +486,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <span class="footer-text">2019 © stacks</span>
+                            <span class="footer-text">2020 © DimaDesign</span>
                         </div>
                     </div>
                 </div>
