--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         Основное
                     </li>
                     <li>
-                        <a href="index.html" class="active"><i class="material-icons">Главная</i>Главная</a>
+                        <a href="index.html" class="active"><i class="material-icons">dashboard</i>Главная</a>
                     </li>
                     <li>
                         <a href="profile.html"><i class="material-icons">person_outline</i>Profile</a>
