--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
                         <a href="index.html" class="active"><i class="material-icons">dashboard</i>Главная</a>
                     </li>
                     <li>
-                        <a href="profile.html"><i class="material-icons">person_outline</i>Profile</a>
+                        <a href="profile.html"><i class="material-icons">person_outline</i>Профиль</a>
                     </li>
                     <li>
-                        <a href="mailbox.html"><i class="material-icons">inbox</i>Mailbox</a>
+                        <a href="mailbox.html"><i class="material-icons">inbox</i>Почта</a>
                     </li>
                     <li>
-                        <a href="todo.html"><i class="material-icons">done_all</i>Todo</a>
+                        <a href="todo.html"><i class="material-icons">done_all</i>Список заданий</a>
                     </li>
                     <li>
-                        <a href="file-manager.html"><i class="material-icons">cloud_queue</i>File Manager</a>
+                        <a href="file-manager.html"><i class="material-icons">cloud_queue</i>Файловый менеджер</a>
                     </li>
                     <li class="sidebar-title">
-                        UI Elements
+                        Элементы
                     </li>
                     <li>
-                        <a href="#"><i class="material-icons">text_format</i>Styles<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href="#"><i class="material-icons">text_format</i>Шрифты<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="styles-typography.html">Typography</a>
@@ -74,61 +74,28 @@
                         </ul>
                     </li>
                     <li>
-                        <a href=""><i class="material-icons">apps</i>Components<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href=""><i class="material-icons">apps</i>Программы<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="ui-alerts.html">Alerts</a>
+                                <a href="ui-alerts.html">Браузеры</a>
                             </li>
                             <li>
-                                <a href="ui-badge.html">Badge</a>
+                                <a href="ui-badge.html">Архиваторы</a>
                             </li>
                             <li>
-                                <a href="ui-breadcrumb.html">Breadcrumb</a>
+                                <a href="ui-breadcrumb.html">Медиаплееры</a>
                             </li>
                             <li>
-                                <a href="ui-buttons.html">Buttons</a>
+                                <a href="ui-buttons.html">Офисные пакеты</a>
                             </li>
                             <li>
-                                <a href="ui-button-group.html">Button Group</a>
+                                <a href="ui-button-group.html">Антивирусы</a>
                             </li>
                             <li>
-                                <a href="ui-card.html">Card</a>
+                                <a href="ui-card.html">Офисные пакеты</a>
                             </li>
                             <li>
-                                <a href="ui-collapse.html">Collapse</a>
-                            </li>
-                            <li>
-                                <a href="ui-dropdowns.html">Dropdowns</a>
-                            </li>
-                            <li>
-                                <a href="ui-list-group.html">List Group</a>
-                            </li>
-                            <li>
-                                <a href="ui-media-object.html">Media Object</a>
-                            </li>
-                            <li>
-                                <a href="ui-modal.html">Modal</a>
-                            </li>
-                            <li>
-                                <a href="ui-navs.html">Navs</a>
-                            </li>
-                            <li>
-                                <a href="ui-pagination.html">Pagination</a>
-                            </li>
-                            <li>
-                                <a href="ui-popovers.html">Popovers</a>
-                            </li>
-                            <li>
-                                <a href="ui-progress.html">Progress</a>
-                            </li>
-                            <li>
-                                <a href="ui-spinners.html">Spinners</a>
-                            </li>
-                            <li>
-                                <a href="ui-toast.html">Toast</a>
-                            </li>
-                            <li>
-                                <a href="ui-tooltips.html">Tooltips</a>
+                                <a href="ui-collapse.html">Торрент клиенты</a>
                             </li>
                         </ul>
                     </li>
@@ -238,7 +205,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <form class="form-inline my-2 my-lg-0 search">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search for projects, apps, pages..." aria-label="Search">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
                     </form>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
