--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <span class="footer-text">2020 © DimaDesign</span>
+                            <span class="footer-text">2020 © AquaC</span>
                         </div>
                     </div>
                 </div>
