--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="profile.html"><i class="material-icons">person_outline</i>Профиль</a>
                     </li>
                     <li>
-                        <a href="mailbox.html"><i class="material-icons">inbox</i>Почта</a>
+                        <a href="404.html"><i class="material-icons">inbox</i>Почта</a>
                     </li>
                     <li>
                         <a href="todo.html"><i class="material-icons">done_all</i>Список заданий</a>
