--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
             <div class="error-container">
                 <div class="error-info">
                     <h1>404</h1>
-                    <p>It seems that the page you are looking for no longer exists.<br>Please contact our <a href="help-center.html">help center</a> or go to the <a href="index.html">homepage</a>.</p>
+                    <p>Похоже, страница, которую вы ищете, более недоступна. Сожалеем.<br>Пожалуйста, посетите <a href="help-center.html">центр помощи</a> или вернитесь на <a href="index.html">главную страницу</a>.</p>
                 </div>
                 <div class="error-image"></div>
             </div>
