--- a/500.html
+++ b/500.html
@@ -34,7 +34,7 @@
             <div class="error-container">
                 <div class="error-info">
                     <h1>500</h1>
-                    <p>Ooopss... Something went wrong.<br>Try refreshing the page or contact our <a href="help-center.html">help center</a>.</p>
+                    <p>Ууупсс... Что-то пошло не так.<br>Попробуйте обновить страницу посетите <a href="help-center.html">центр помощи</a>.</p>
                 </div>
                 <div class="error-image"></div>
             </div>
