--- a/500.html
+++ b/500.html
@@ -10,7 +10,7 @@
         <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         
         <!-- Title -->
-        <title>AquaPrograms</title>
+        <title>AquaPrograms - ошибка 500</title>
 
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
             <div class="error-container">
                 <div class="error-info">
                     <h1>500</h1>
-                    <p>Ууупсс... Что-то пошло не так.<br>Попробуйте обновить страницу посетите <a href="help-center.html">центр помощи</a>.</p>
+                    <p>Ууупсс... Что-то пошло не так.<br>Попробуйте обновить страницу или посетите <a href="help-center.html">центр помощи</a>.</p>
                 </div>
                 <div class="error-image"></div>
             </div>
