--- a/coming-soon.html
+++ b/coming-soon.html
@@ -34,7 +34,7 @@
             <div class="error-container">
                 <div class="error-info">
                     <h1>Находится<br>в разработке</h1>
-                    <p>Код для этой страницы ещё создаётся.<br>Попробуйте посетить позже, мы работаем над тем, чтобы страница как можно быстрее заработала.</p>
+                    <p>Код для этой страницы ещё создаётся.<br>Попробуйте посетить позже, мы работаем над скорым запуском страницы.</p>
                 </div>
                 <div class="error-image"></div>
             </div>
