--- a/index.html
+++ b/index.html
@@ -232,7 +232,23 @@
             <div class="lime-body">
                 <div class="container">
                   <!-- Страница -->
-
+                  <div class="row">
+                    <div class="col-xl">
+                      <div class="card">
+                      <img src="assets/images/epicgames.jpg" class="card-img-top" alt="Placeholder">
+                        <div class="card-body">
+                          <h5 class="card-title">Раздача Epic Games</h5>
+                            <p class="card-text">Стреляйте и хватайте добычу, исследуя безумный мир Пандоры в BORDERLANDS 2 и лунные пейзажи в BORDERLANDS: THE PRE-SEQUEL с коллекцией BORDERLANDS: THE HANDSOME COLLECTION.</p>
+                            <span class="badge badge-warning">Действует до 4 июня до 20:00</span><br><br>
+                            <a href="https://www.epicgames.com" target="_blank" class="btn btn-primary">На сайт</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xl">
+                    </div>
+                    <div class="col-xl">
+                    </div>
+                  </div>
                   <!-- Конец страницы -->
                 </div>
             </div>
