--- a/index.html
+++ b/index.html
@@ -44,32 +44,20 @@
                     <li>
                         <a href="profile.html"><i class="material-icons">person_outline</i>Профиль</a>
                     </li>
-                    <li>
-                        <a href="404.html"><i class="material-icons">inbox</i>Почта</a>
-                    </li>
-                    <li>
-                        <a href="todo.html"><i class="material-icons">done_all</i>Список заданий</a>
-                    </li>
-                    <li>
-                        <a href="file-manager.html"><i class="material-icons">cloud_queue</i>Файловый менеджер</a>
-                    </li>
                     <li class="sidebar-title">
-                        Элементы
+                        Разное
                     </li>
                     <li>
                         <a href="#"><i class="material-icons">text_format</i>Шрифты<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="styles-typography.html">Typography</a>
+                                <a href="styles-typography.html">Популярные</a>
                             </li>
                             <li>
-                                <a href="styles-code.html">Code</a>
+                                <a href="styles-code.html">Красивые</a>
                             </li>
                             <li>
-                                <a href="styles-tables.html">Tables</a>
-                            </li>
-                            <li>
-                                <a href="styles-icons.html">Icons</a>
+                                <a href="styles-code.html">3Д шрифты</a>
                             </li>
                         </ul>
                     </li>
@@ -77,7 +65,7 @@
                         <a href=""><i class="material-icons">apps</i>Программы<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="ui-alerts.html">Браузеры</a>
+                                <a href="browsers.html">Браузеры</a>
                             </li>
                             <li>
                                 <a href="ui-badge.html">Архиваторы</a>
@@ -129,7 +117,7 @@
                         <a href="forms.html"><i class="material-icons">input</i>Forms</a>
                     </li>
                     <li class="sidebar-title">
-                        Other
+                        Остальное
                     </li>
                     <li>
                         <a href=""><i class="material-icons">star_border</i>Pages<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
