--- a/browsers.html
+++ b/browsers.html
@@ -230,9 +230,9 @@
                                   </div>
                                   <div class="card-body file-info">
                                       <p>Vivaldi</p>
-                                      <span class="file-size">450Мб</span><br>
+                                      <span class="file-size">450МБ</span><br>
                                       <span class="file-date">Версия: <span class="badge badge-success">3.0.1874.38</span></span><br>
-                                      <span class="file-size"><a href="https://vivaldi.com/ru/download/" target="_blank" class="btn btn-success">Скачать</a> 60Мб</span>
+                                      <span class="file-size"><a href="https://vivaldi.com/ru/download/" target="_blank" class="btn btn-success">Скачать</a> 60МБ</span>
                                   </div>
                               </div>
                           </div>
