--- a/browsers.html
+++ b/browsers.html
@@ -226,7 +226,7 @@
                           <div class="col-lg-6 col-xl-3">
                               <div class="card file photo">
                                   <div class="card-program file-icon">
-                                      <img src="assets/images/vivaldi.jpeg" class="card-img-top" alt="Placeholder">
+                                      <img src="assets/images/vivaldi.png" class="card-img-top" alt="Placeholder">
                                   </div>
                                   <div class="card-body file-info">
                                       <p>Vivaldi</p>
