--- a/browsers.html
+++ b/browsers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
         <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
         <!-- Title -->
-        <title>AquaPrograms - Главная</title>
+        <title>AquaPrograms - Браузеры</title>
 
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
                         Основное
                     </li>
                     <li>
-                        <a href="index.html" class="active"><i class="material-icons">dashboard</i>Главная</a>
+                        <a href="index.html"><i class="material-icons">dashboard</i>Главная</a>
                     </li>
                     <li>
                         <a href="profile.html"><i class="material-icons">person_outline</i>Профиль</a>
@@ -65,7 +65,7 @@
                         <a href=""><i class="material-icons">apps</i>Программы<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="ui-alerts.html">Браузеры</a>
+                                <a href="ui-alerts.html" class="active">Браузеры</a>
                             </li>
                             <li>
                                 <a href="ui-badge.html">Архиваторы</a>
@@ -83,7 +83,7 @@
                                 <a href="ui-card.html">Офисные пакеты</a>
                             </li>
                             <li>
-                                <a href="ui-collapse.html">Торрент клиенты</a>
+                                <a href="ui-collapse.html">Торрент-клиенты</a>
                             </li>
                         </ul>
                     </li>
@@ -226,25 +226,26 @@
                           <div class="col-lg-6 col-xl-3">
                               <div class="card file photo">
                                   <div class="card-program file-icon">
-                                      <img src="assets/images/vivaldi.png" class="card-img-top" alt="Placeholder">
+                                      <img src="assets/images/Vivaldi.png" class="card-img-top" alt="Placeholder">
                                   </div>
                                   <div class="card-body file-info">
                                       <p>Vivaldi</p>
-                                      <span class="file-size">450МБ</span><br>
+                                      <span class="file-size">450 МБ</span><br>
                                       <span class="file-date">Версия: <span class="badge badge-success">3.0.1874.38</span></span><br>
-                                      <span class="file-size"><a href="https://vivaldi.com/ru/download/" target="_blank" class="btn btn-success">Скачать</a> 60МБ</span>
+                                      <span class="file-size"><a href="https://vivaldi.com/ru/download/" target="_blank" class="btn btn-success">Скачать</a> 60 МБ</span>
                                   </div>
                               </div>
                           </div>
                           <div class="col-lg-6 col-xl-3">
-                              <div class="card file pdf">
-                                  <div class="card-header file-icon">
-                                      <i class="material-icons">description</i>
+                              <div class="card file photo">
+                                  <div class="card-program file-icon">
+                                      <img src="assets/images/EdgeChr.png" class="card-img-top" alt="Placeholder">
                                   </div>
                                   <div class="card-body file-info">
-                                      <p>Lease_05.pdf</p>
-                                      <span class="file-size">17.5kb</span><br>
-                                      <span class="file-date">Last Accessed: 2 hours ago</span>
+                                      <p>Microsoft Edge (Chromium)</p>
+                                      <span class="file-size">566 МБ</span><br>
+                                      <span class="file-date">Версия: <span class="badge badge-success">83.0.478.37</span></span><br>
+                                      <span class="file-size"><a href="https://www.microsoft.com/ru-ru/edge" target="_blank" class="btn btn-success">Скачать</a> 2 МБ</span>
                                   </div>
                               </div>
                           </div>
