--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +7,18 @@
         <meta name="description" content="Responsive Admin Dashboard Template">
         <meta name="keywords" content="admin,dashboard">
         <meta name="author" content="stacks">
-        <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- Вышеприведенные 6 мета-тегов *должны* идти первыми в заголовке; любое другое содержимое заголовка должно следовать *после* этих тегов -->
         
-        <!-- Title -->
+        <!-- Название страницы -->
         <title>AquaPrograms - ошибка 404</title>
 
-        <!-- Styles -->
+        <!-- Плагины -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/plugins/font-awesome/css/all.min.css" rel="stylesheet">
       
-        <!-- Theme Styles -->
+        <!-- Стили темы -->
         <link href="assets/css/lime.min.css" rel="stylesheet">
         <link href="assets/css/custom.css" rel="stylesheet">
 
