--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         <!-- Вышеприведенные 6 мета-тегов *должны* идти первыми в заголовке; любое другое содержимое заголовка должно следовать *после* этих тегов -->
         
         <!-- Название страницы -->
-        <title>AquaPrograms - ошибка 404</title>
+        <title>AquaPrograms - Ошибка 404</title>
 
         <!-- Плагины -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
