--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
                     </div>
                   </div>
                     
-                    <div class="row">
+             <div class="row">
                         <div class="col-xl">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Basic</h5>
-                                    <p>Using the most basic table markup, here’s how <code>.table</code>-based tables look in Bootstrap.</p>
-                                    <table class="table">
+                                    <h5 class="card-title">Stripped Rows</h5>
+                                    <p>Use <code>.table-striped</code> to add zebra-striping to any table row within the <code>&lt;tbody&gt;</code>.</p>
+                                    <table class="table table-striped">
                                         <thead>
                                             <tr>
                                                 <th scope="col">#</th>
@@ -278,6 +278,7 @@
                             </div>
                         </div>
                     </div>
+                    
                   <!-- Конец страницы -->
                 </div>
             </div>
