--- a/index.html
+++ b/index.html
@@ -243,15 +243,17 @@
                         <div class="col-xl">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Stripped Rows</h5>
-                                    <p>Use <code>.table-striped</code> to add zebra-striping to any table row within the <code>&lt;tbody&gt;</code>.</p>
+                                    <h5 class="card-title">Дистрибутивы Linux</h5>
+                                    <p>Наша подборка дистрибутивов</p>
                                     <table class="table table-striped">
                                         <thead>
                                             <tr>
-                                                <th scope="col">#</th>
-                                                <th scope="col">First</th>
-                                                <th scope="col">Last</th>
-                                                <th scope="col">Handle</th>
+                                                <th scope="col">Место</th>
+                                                <th scope="col">Название</th>
+                                                <th scope="col">Оценка</th>
+                                                <th scope="col">Пакетная база</th>
+                                                <th scope="col">Кратко</th>
+                                                <th scope="col">Скачать</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -272,6 +274,18 @@
                                                 <td>Larry</td>
                                                 <td>the Bird</td>
                                                 <td>@twitter</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">4</th>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>@mdo</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">5</th>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>@mdo</td>
                                             </tr>
                                         </tbody>
                                     </table>       
