--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                                                 <td>Mark</td>
                                                 <td>Otto</td>
                                                 <td>@mdo</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
+                                                <td>Да</td>
+                                                <td>Нема</td>
                                             </tr>
                                             <tr>
                                                 <th scope="row">2</th>
