--- a/index.html
+++ b/index.html
@@ -259,11 +259,21 @@
                                         <tbody>
                                             <tr>
                                                 <th scope="row">1</th>
-                                                <td>Mark</td>
-                                                <td>Otto</td>
-                                                <td>@mdo</td>
-                                                <td>Да</td>
-                                                <td>Нема</td>
+                                                <td>Ubuntu</td>
+                                                <td>Отлично</td>
+                                                <td>DEB</td>
+                                                <td>Самый популярный, совместимый</td>
+                                                <td>
+                                                    <div class="btn-group-vertical" role="group" aria-label="Basic example">
+                                                    <button type="button" class="btn btn-secondary">Ubuntu</button>
+                                                    <button type="button" class="btn btn-secondary">Kubuntu</button>
+                                                    <button type="button" class="btn btn-secondary">Lubuntu</button>
+                                                    <button type="button" class="btn btn-secondary">Xubuntu</button>
+                                                    <button type="button" class="btn btn-secondary">Ubuntu MATE</button>
+                                                    <button type="button" class="btn btn-secondary">Ubuntu Budgie</button>
+                                                    <button type="button" class="btn btn-secondary">Др. вариации Ubuntu</button>
+                                                    </div>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <th scope="row">2</th>
