--- a/index.html
+++ b/index.html
@@ -264,14 +264,11 @@
                                                 <td>DEB</td>
                                                 <td>Самый популярный, совместимый</td>
                                                 <td>
-                                                    <div class="btn-group-vertical" role="group" aria-label="Basic example">
-                                                    <button type="button" class="btn btn-secondary">Ubuntu</button>
-                                                    <button type="button" class="btn btn-secondary">Kubuntu</button>
-                                                    <button type="button" class="btn btn-secondary">Lubuntu</button>
-                                                    <button type="button" class="btn btn-secondary">Xubuntu</button>
-                                                    <button type="button" class="btn btn-secondary">Ubuntu MATE</button>
-                                                    <button type="button" class="btn btn-secondary">Ubuntu Budgie</button>
-                                                    <button type="button" class="btn btn-secondary">Др. вариации Ubuntu</button>
+                                                     <div class="dropdown-menu">
+                                                     <a class="dropdown-item" href="#">Ubuntu</a>
+                                                     <a class="dropdown-item" href="#">Kubuntu</a>
+                                                     <a class="dropdown-item" href="#">Lubuntu</a>
+                                                     <a class="dropdown-item" href="#">Xubuntu</a>
                                                     </div>
                                                 </td>
                                             </tr>
