--- a/index.html
+++ b/index.html
@@ -264,11 +264,16 @@
                                                 <td>DEB</td>
                                                 <td>Самый популярный, совместимый</td>
                                                 <td>
-                                                     <div class="dropdown-menu">
-                                                     <a class="dropdown-item" href="#">Ubuntu</a>
+                                                    <div class="btn-group">
+                                                    <button type="button" class="btn btn-danger">Ubuntu</button>
+                                                    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <span class="sr-only">Toggle Dropdown</span>
+                                                    </button>
+                                                    <div class="dropdown-menu">
                                                      <a class="dropdown-item" href="#">Kubuntu</a>
                                                      <a class="dropdown-item" href="#">Lubuntu</a>
                                                      <a class="dropdown-item" href="#">Xubuntu</a>
+                                                    </div>
                                                     </div>
                                                 </td>
                                             </tr>
