--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                     <div class="col-xl">
                     </div>
                   </div>
-            
-                    <!-- Начало таблицы -->       
+
+                    <!-- Начало таблицы -->
                     <div class="row">
                         <div class="col-xl">
                             <div class="card">
@@ -265,8 +265,30 @@
                                                 <td>Самый популярный, совместимый</td>
                                                 <td>
                                                     <div class="btn-group">
-                                                    <button type="button" class="btn btn-danger">Ubuntu</button>
-                                                    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <a class="btn btn-primary" target="_blank" href="https://ubuntu.com/download/desktop">Ubuntu</a>
+                                                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <span class="sr-only">Toggle Dropdown</span>
+                                                    </button>
+                                                    <div class="dropdown-menu">
+                                                     <a class="dropdown-item" target="_blank" href="https://kubuntu.org/getkubuntu/">Kubuntu</a>
+                                                     <a class="dropdown-item" target="_blank" href="https://lubuntu.me/downloads/">Lubuntu</a>
+                                                     <a class="dropdown-item" target="_blank" href="https://xubuntu.org/download/">Xubuntu</a>
+                                                     <a class="dropdown-item" target="_blank" href="https://ubuntu-mate.org/download/">Ubuntu MATE</a>
+                                                     <a class="dropdown-item" target="_blank" href="https://ubuntubudgie.org/downloads/">Ubuntu Budgie</a>
+                                                    </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">2</th>
+                                                <td>[название]</td>
+                                                <td>[оценка]</td>
+                                                <td>[база]</td>
+                                                <td>[описание]</td>
+                                                <td>
+                                                    <div class="btn-group">
+                                                    <a class="btn btn-primary target="_blank"" href="#">Help</a>
+                                                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <span class="sr-only">Toggle Dropdown</span>
                                                     </button>
                                                     <div class="dropdown-menu">
@@ -277,46 +299,14 @@
                                                     </div>
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <th scope="row">2</th>
-                                                <td>Jacob</td>
-                                                <td>Thornton</td>
-                                                <td>@fat</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">3</th>
-                                                <td>Larry</td>
-                                                <td>the Bird</td>
-                                                <td>@twitter</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">4</th>
-                                                <td>Mark</td>
-                                                <td>Otto</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">5</th>
-                                                <td>Mark</td>
-                                                <td>Otto</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
-                                            </tr>
                                         </tbody>
-                                    </table>       
+                                    </table>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- Конец Таблицы -->
-                    
+
                   <!-- Конец страницы -->
                 </div>
             </div>
