--- a/index.html
+++ b/index.html
@@ -281,22 +281,12 @@
                                             </tr>
                                             <tr>
                                                 <th scope="row">2</th>
-                                                <td>[название]</td>
-                                                <td>[оценка]</td>
-                                                <td>[база]</td>
+                                                <td>Manjaro</td>
+                                                <td>Отлично</td>
+                                                <td>Arch</td>
                                                 <td>[описание]</td>
                                                 <td>
-                                                    <div class="btn-group">
-                                                    <a class="btn btn-primary target="_blank"" href="#">Help</a>
-                                                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                    <span class="sr-only">Toggle Dropdown</span>
-                                                    </button>
-                                                    <div class="dropdown-menu">
-                                                     <a class="dropdown-item" href="#">Kubuntu</a>
-                                                     <a class="dropdown-item" href="#">Lubuntu</a>
-                                                     <a class="dropdown-item" href="#">Xubuntu</a>
-                                                    </div>
-                                                    </div>
+                                                    <a class="btn btn-primary target="_blank"" href="https://manjaro.org/download/">Manjaro</a> 
                                                 </td>
                                             </tr>
                                         </tbody>
