--- a/500.html
+++ b/500.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Responsive Admin Dashboard Template">
         <meta name="keywords" content="admin,dashboard">
         <meta name="author" content="stacks">
-        <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- Вышеприведенные 6 мета-тегов *должны* идти первыми в заголовке; любое другое содержимое заголовка должно идти *после* этих тегов -->
         
         <!-- Title -->
         <title>AquaPrograms - Ошибка 500</title>
